# anvil

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  implementation-spec.md  public-safety-boundary.md  roadmap.md
schemas/: agent_output.schema.json  agent_quality_report.schema.json  agent_status.schema.json  agent_task.schema.json  baseline_validation.schema.json  claim_ledger.schema.json  command_result.schema.json  contract_review.schema.json  controller_state.schema.json  event_log_line.schema.json  execution_work_orders.schema.json  gap_matrix.schema.json  guardrail_matrix.schema.json  human_decision.schema.json  issue_ledger.schema.json  project.schema.json  repo.schema.json  review_findings_consolidated.schema.json  review_findings_raw.schema.json  risk_assessment.schema.json  run_manifest.schema.json  run_scorecard.schema.json  source_manifest.schema.json  task_contract.schema.json  validation_results.schema.json  worktree_manifest.schema.json
tests/: README.md  conftest.py  m1_fixtures.py  test_cli.py  test_controller_discovery_baseline.py  test_controller_dryrun.py  test_controller_events.py  test_controller_gates.py  test_controller_resume.py  test_controller_review_fixes.py  test_controller_risk.py  test_controller_xref.py  test_drift.py  test_lease_safety.py  test_leases.py  test_m2_agent_io.py  test_m2_amendment.py  test_m2_command_policy.py  test_m2_contract_loop.py  test_m2_human_decision.py  test_m2_redaction.py  test_m3_artifacts.py  test_m3_executor.py  test_m3_ownership.py  test_m3_rollback.py  test_m3_runner.py  test_m3_scanner.py  test_m3_scope.py  test_m4_standard_mode.py  test_m5_parallel_work_orders.py  test_pause_resume.py  test_registry_projects_repos.py  test_runs_worktree.py  test_schema_validation.py
(+247 files in other folders)
